[package]
name = "walabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "walabot"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.70"
bevy_math = "0.10.1"
derive_more = "0.99.17"
libloading = "0.7.4"
once_cell = "1.17.1"
paste = "1.0.12"
pyo3 = "0.18.2"
thiserror = "1.0.40"
uom = "0.34.0"
